# willog_project

./: Cargo.toml  README.md
src/: api.rs  db.rs  function.rs  main.rs  services.rs  structs.rs
src/api/: get_stat.rs  index.rs  regist_device.rs  regist_group.rs  regist_temperature.rs
src/services/: device.rs  group.rs  temperature.rs
src/structs/: customResponder.rs  request.rs  response.rs
