[package]
name = "willog_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5", features=["json"]}
rocket_contrib = "0.4.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.2", features = ["mysql", "macros", "runtime-tokio-rustls"] }
syn = { version = "1.0", features = ["full"] }
tokio = { version = "1", features = ["full"], optional = true }
rustls = { version = "0.22", optional = true }
sqlx-macros = "0.7.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
regex = "1.5"

[features]
runtime-tokio-rustls = ["tokio", "rustls"]

